# start-up-repo

./: .env.example  .gitignore  Claude_Opus_Master_Prompt_WattWise_MVP2_Revised.md  Laporan_Aplikasi_WattWise_AI.md  README.md  SECURITY.md  WattWise_AI_MVP_Guidebook_Performance_Updated.md  WattWise_AI_MVP_Guidebook_Revised.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
ml/benchmark/: README.md  pyproject.toml
ml/benchmark/scripts/: acquire_and_validate.py  audit_bdg2_exclusions.py  audit_recovered_run.py  deepar_smoke_test.py  probe_recovered_artifacts.py
ml/benchmark/src/wattwise_benchmark/: __init__.py  cli.py  config.py  contracts.py  execution.py  pipeline.py  recovery.py  reporting.py  runtime.py  selection.py
ml/benchmark/src/wattwise_benchmark/acquisition/: __init__.py  bdg2_provenance.py  manifest.py
ml/benchmark/src/wattwise_benchmark/evaluation/: __init__.py  metrics.py
ml/benchmark/src/wattwise_benchmark/features/: __init__.py  build.py
ml/benchmark/src/wattwise_benchmark/ingestion/: __init__.py  bdg2.py  common.py  uci.py
ml/benchmark/src/wattwise_serving/: __init__.py  __main__.py  artifacts.py  contracts.py  http_server.py  runtime.py  testing.py
ml/benchmark/tests/: test_contracts.py  test_deepar_zero.py  test_deterministic.py  test_eligibility.py  test_features.py  test_ingestion.py  test_manifest.py  test_metrics.py  test_provenance.py  test_recovery.py  test_reporting.py  test_selection.py  test_serving_artifacts.py  test_serving_contracts.py  test_serving_http.py  test_serving_runtime.py  test_splits.py
(+617 files in other folders)
